# inferno-windows

./: .gitignore  CONTRIBUTING.md  COPILOT_PROMPT.md  Cargo.toml  LICENSE  NOTES.md  README.md  SETUP.md  build_output.txt  check_out.txt  check_output.txt  commit_info.txt  errors.txt  windows_audio_dante_handoff.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml
docs/: ASIO.md  DRIVER_SIGNING.md  PTP_WINDOWS.md  ROADMAP.md  SPRINT_AGENTS.md  WAVE7_AGENTS.md
inferno2pipe/: Cargo.toml  README.md
inferno2pipe/src/: main.rs
inferno_aoip/: Cargo.toml
inferno_aoip/src/: common.rs  device_info.rs  lib.rs  mdns_client.rs  media_clock.rs  ring_buffer.rs  state_storage.rs
inferno_aoip/src/device_server/: arc_server.rs  channels_subscriber.rs  cmc_server.rs  flows_control_server.rs  flows_rx.rs  flows_tx.rs  info_mcast_server.rs  mdns_server.rs  mod.rs  peaks.rs  samples_collector.rs  samples_utils.rs  saved_settings.rs  settings.rs  tx_multicasts.rs
inferno_aoip/src/protocol/: flows_control.rs  mcast.rs  proto_arc.rs  proto_cmc.rs  req_resp.rs
inferno_aoip/src/ptp/: mod.rs
inferno_aoip/src/util/: bytes.rs  net.rs  os.rs  thread.rs
inferno_asio/: Cargo.toml  README.md
inferno_asio/src/: lib.rs
inferno_driver/: ComponentizedApoSample.inx  ComponentizedAudioSample.inx  ComponentizedAudioSampleExtension.inx  README.md  common.cpp  inferno_driver.vcxproj  savedata.cpp  shm.cpp  shm.h
inferno_gui/: Cargo.toml  README.md  build.rs  inferno_gui.manifest  inferno_gui.rc
inferno_gui/src/: main.rs  settings_window.rs  wizard.rs
inferno_wasapi/: Cargo.toml
inferno_wasapi/src/: config.rs  firewall.rs  ipc.rs  logging.rs  main.rs  metering.rs  metrics.rs  network_health.rs  service.rs  service_install.rs  shm_reader.rs  tray.rs
inferno_wasapi/tests/: ipc_test.rs
inferno_wasapi/wix/: License.rtf  main.wxs
scripts/: README.md  enable-testsigning.ps1  install-sysvad.ps1  install-vbcable.ps1  open-firewall-admin.ps1  setup-dev-machine.ps1  setup-github-runner.ps1  soak_test.ps1
searchfire/: Cargo.toml
searchfire/src/: broadcast.rs
searchfire/src/broadcast/: service.rs
usrvclock/: Cargo.toml
usrvclock/src/: lib.rs
