[package]
name = "inferno_gui"
version = "0.1.0"
edition = "2021"
description = "Status and configuration GUI for Inferno AoIP"

[[bin]]
name = "inferno_gui"
path = "src/main.rs"

[dependencies]
native-windows-gui = "1.0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "time", "sync"] }
if-addrs = "0.10"
toml = "0.8"
dirs = "5.0"

[build-dependencies]
embed-resource = "2"
