[package]
name = "inferno_wasapi"
version = "0.1.0"
edition = "2021"
description = "Dante AoIP receiver for Windows via WASAPI"

[[bin]]
name = "inferno_wasapi"
path = "src/main.rs"

[dependencies]
inferno_aoip = { path = "../inferno_aoip" }
wasapi = "0.15"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
dirs = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hostname = "0.3"
windows = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
windows-service = "0.8"
