[package]
name = "usrvclock"
version = "0.2.0"
edition = "2021"
authors = ["Teodor Wozniak <teo@lumifaza.org>"]
description = "Windows stub for usrvclock protocol (PTP clock overlay)"
license = "MIT OR Apache-2.0"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
custom_error = "1.9.2"
tokio = { version = "1.38", optional = true, features = ["rt", "time", "sync", "macros"] }
windows = { version = "0.52", features = [
    "Win32_System_Performance",
    "Win32_Foundation",
    "Win32_System_SystemInformation"
] }
tracing = "0.1"
